[tool.poetry]
name = "pytest-example"
version = "0.1.0"
description = ""
authors = ["mercuriete <mercuriete@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"


[tool.poetry.group.dev.dependencies]
pytest = "==8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
